--- a/index.html
+++ b/index.html
@@ -12,30 +12,62 @@
     <nav>
       <ul class="side-nav">
         <li><img src="img/revo.png" alt=""></li>
-        <li> <a href="#" id="black">Personale</a></li>
+        <li> <a href="#" id="black">Personal</a></li>
         <li> <a href="#"> Business</a></li>
       </ul>
     </nav>
 
       <nav>
 <ul class="main-nav">
-  <li> <a href="#"> Funzionalità</a></li>
-  <li> <a href="#"> Abbonamenti</a></li>
-  <li> <a href="#"> Chi siamo</a></li>
-  <li> <a href="#">  Aiuto</a></li>
-  <button type="button" name="button" id="btn-1">Accedi</button>
-  <button type="button" name="button" id="btn-2">Scarica l'app</button>
+  <li> <a href="#"> Features</a></li>
+  <li> <a href="#"> Plans</a></li>
+  <li class="active"> <a href="#"> About us</a>
+<div class="dropdown-menu">
+  <ul>
+    <li>About us</li>
+    <li>Blog</li>
+    <li>Leadership</li>
+    <li>Newsroom</li>
+    <li>Affiliates</li>
+    <li>Influencers</li>
+    <li>Careers</li>
+    <li>Culture</li>
+    <li>Diversity &and; inclusion</li>
+    <li>Contact</li>
+  </ul>
+</div>
+
+  </li>
+  <li class="active"> <a href="#"> Help</a>
+    <div class="dropdown-menu">
+      <ul>
+        <li>Help centre</li>
+        <li>Community</li>
+        <li>Security</li>
+        <li>System status</li>
+        <li>Developer APIs</li>
+    </div>
+
+  </li>
+  <li><button type="button" name="button" id="btn-1">Sign in</button></li>
+  <li><button type="button" name="button" id="btn-2">Get the app</button></li>
+
+  </ul>
 </ul>
 
       </nav>
   </header>
-  <main>
+<main>
 
   </main>
   <footer>
 
   </footer>
+
+  <!-- SCRIPT -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="js/myscript.js" charset="utf-8"></script>
+<!-- /SCRIPT -->
+
 </body>
 </html>
