--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <ul class="main-nav">
   <li> <a href="#"> Features</a></li>
   <li> <a href="#"> Plans</a></li>
-  <li class="active"> <a href="#"> About us</a>
+  <li> <a class="active" href="#"> About us</a>
 <div class="dropdown-menu">
   <ul>
     <li>About us</li>
@@ -32,13 +32,13 @@
     <li>Influencers</li>
     <li>Careers</li>
     <li>Culture</li>
-    <li>Diversity &and; inclusion</li>
+    <li>Diversity &amp; inclusion</li>
     <li>Contact</li>
   </ul>
 </div>
 
   </li>
-  <li class="active"> <a href="#"> Help</a>
+  <li> <a class="active" href="#"> Help</a>
     <div class="dropdown-menu">
       <ul>
         <li>Help centre</li>
