--- a/index.html
+++ b/index.html
@@ -19,8 +19,52 @@
 
       <nav>
 <ul class="main-nav">
-  <li> <a href="#"> Features</a></li>
-  <li> <a href="#"> Plans</a></li>
+  <li> <a href="#"> Features</a>
+  <div class="dropdown-menu features">
+<ul>
+  <li>ACCOUNT</li>
+  <li>Budget &amp; Analytics</li>
+  <li>Cards</li>
+  <li>Junior account</li>
+  <li>Pockets</li>
+</ul>
+<ul>
+  <li>WEALTH</li>
+  <li>Crypto</li>
+  <li>Commodities</li>
+  <li>Vaults</li>
+  <li>Saving Vaults</li>
+</ul>
+<ul>
+  <li>PAYMENTS</li>
+  <li>Money transfers</li>
+  <li>Group bills</li>
+  <li>Subscriptions</li>
+</ul>
+<ul>
+  <li>EXTRAS</li>
+  <li>Donations</li>
+  <li>Overseas insurance</li>
+  <li>Device insurance</li>
+  <li>Safety</li>
+  <li>Rewards</li>
+</ul>
+  </div>
+
+
+
+  </li>
+  <li> <a href="#"> Plans</a>
+<div class="dropdown-menu">
+  <ul>
+    <li>Standard</li>
+    <li>Plus</li>
+    <li>Premium</li>
+    <li>Metal</li>
+    <li>Compare plans</li>
+  </ul>
+</div>
+</li>
   <li> <a class="active" href="#"> About us</a>
 <div class="dropdown-menu">
   <ul>
