--- a/index.html
+++ b/index.html
@@ -19,36 +19,45 @@
 
       <nav>
 <ul class="main-nav">
-  <li> <a href="#"> Features</a>
+  <li id="feat"> <a href="#"> Features</a>
   <div class="dropdown-menu features">
-<ul>
-  <li>ACCOUNT</li>
-  <li>Budget &amp; Analytics</li>
-  <li>Cards</li>
-  <li>Junior account</li>
-  <li>Pockets</li>
-</ul>
-<ul>
-  <li>WEALTH</li>
-  <li>Crypto</li>
-  <li>Commodities</li>
-  <li>Vaults</li>
-  <li>Saving Vaults</li>
-</ul>
-<ul>
-  <li>PAYMENTS</li>
-  <li>Money transfers</li>
-  <li>Group bills</li>
-  <li>Subscriptions</li>
-</ul>
-<ul>
-  <li>EXTRAS</li>
-  <li>Donations</li>
-  <li>Overseas insurance</li>
-  <li>Device insurance</li>
-  <li>Safety</li>
-  <li>Rewards</li>
-</ul>
+    <div class="sub-menu">
+      <ul>
+        <li>ACCOUNT</li>
+        <li>Budget &amp; Analytics</li>
+        <li>Cards</li>
+        <li>Junior account</li>
+        <li>Pockets</li>
+      </ul>
+    </div>
+    <div class="sub-menu">
+      <ul>
+        <li>WEALTH</li>
+        <li>Crypto</li>
+        <li>Commodities</li>
+        <li>Vaults</li>
+        <li>Saving Vaults</li>
+      </ul>
+
+    </div>
+    <div class="sub-menu">
+      <ul>
+        <li>PAYMENTS</li>
+        <li>Money transfers</li>
+        <li>Group bills</li>
+        <li>Subscriptions</li>
+      </ul>
+    </div>
+    <div class="sub-menu">
+      <ul>
+        <li>EXTRAS</li>
+        <li>Donations</li>
+        <li>Overseas insurance</li>
+        <li>Device insurance</li>
+        <li>Safety</li>
+        <li>Rewards</li>
+      </ul>
+    </div>
   </div>
 
 
@@ -56,7 +65,7 @@
   </li>
   <li> <a href="#"> Plans</a>
 <div class="dropdown-menu">
-  <ul>
+  <ul class="small-menu">
     <li>Standard</li>
     <li>Plus</li>
     <li>Premium</li>
@@ -67,7 +76,7 @@
 </li>
   <li> <a class="active" href="#"> About us</a>
 <div class="dropdown-menu">
-  <ul>
+  <ul class="small-menu">
     <li>About us</li>
     <li>Blog</li>
     <li>Leadership</li>
@@ -84,7 +93,7 @@
   </li>
   <li> <a class="active" href="#"> Help</a>
     <div class="dropdown-menu">
-      <ul>
+      <ul class="small-menu">
         <li>Help centre</li>
         <li>Community</li>
         <li>Security</li>
